BUGFIX :: Right panels overflow fix

--- a/src/components/TestBuilder/RightPanel/RightPanel.module.scss
+++ b/src/components/TestBuilder/RightPanel/RightPanel.module.scss
@@ -2,6 +2,7 @@
   padding: 4px 0;
   display: flex;
   height: calc(100% - 120px);
+  overflow: auto;
 
   .title {
     margin-left: 14px;
