--- a/src/styles/FlowBuilder.module.scss
+++ b/src/styles/FlowBuilder.module.scss
@@ -33,6 +33,7 @@
 
 .rightPanel {
   padding: 4px 0;
+  height: calc(100% - 120px);
   .title {
     margin-left: 14px;
     font-size: 20px;
